--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,13 @@ header {
 	margin-top: 33px;
 	display: inline-block;
 	text-decoration: none;
+	-webkit-transition: 0.2s;
+	-o-transition: 0.2s;
+	transition: 0.2s;
+}
+
+.header-button:hover {
+	box-shadow: none;
 }
 
 header small {
@@ -156,6 +163,14 @@ margin-bottom: 7px;
 	font-size: 18px;
 	padding: 12px 40px;
 	text-decoration: none;
+	-webkit-transition: 0.2s;
+	-o-transition: 0.2s;
+	transition: 0.2s;
+}
+
+.footer-button:hover {
+	background-color: #fff;
+	color: #3a7df3;
 }
 
 @media (max-width: 1200px) {
